feat: SchedulingConfigurer beans support